- Added preview mode and ISR

--- a/next/.eslintrc.json
+++ b/next/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "standard",
-        "next"
+        "next",
+        "prettier"
     ],
     "parserOptions": {
         "ecmaFeatures": {
