--- a/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers.csproj
+++ b/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers.csproj
@@ -20,38 +20,12 @@
 	<ItemGroup>
 	  <None Remove=".gitignore" />
 	  <None Remove="azure-pipelines.yml" />
-	  <None Remove="Migrations\media\media\1lxdycck\tobeer-hero.jpg" />
-	  <None Remove="Migrations\media\media\j4qg5okx\beer-product.jpg" />
-	  <None Remove="Migrations\media\media\oqphklgr\ice-beer-hero.jpg" />
-	  <None Remove="Migrations\media\media\rpnbawgo\beer-404.jpg" />
-	  <None Remove="Migrations\media\media\ua0kfpk0\dev-beer-hero.jpg" />
-	  <None Remove="Migrations\media\media\v10nyjfd\lorem-beer-hero.jpg" />
-	  <None Remove="Migrations\package.xml" />
+	  <None Remove="Migrations\package.zip" />
 	  <None Remove="NuGet.Config" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Migrations\media\media\1lxdycck\tobeer-hero.jpg">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="Migrations\media\media\j4qg5okx\beer-product.jpg">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="Migrations\media\media\oqphklgr\ice-beer-hero.jpg">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="Migrations\media\media\rpnbawgo\beer-404.jpg">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="Migrations\media\media\ua0kfpk0\dev-beer-hero.jpg">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="Migrations\media\media\v10nyjfd\lorem-beer-hero.jpg">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-	  <EmbeddedResource Include="Migrations\package.xml">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
+	  <EmbeddedResource Include="Migrations\package.zip" />
 	</ItemGroup>
 
 	<ItemGroup>
