--- a/multisite-beers/azure-pipelines.yml
+++ b/multisite-beers/azure-pipelines.yml
@@ -1,7 +1,7 @@
 variables:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   majorVersion: 0
-  minorVersion: 2
+  minorVersion: 1
   patchVersion: 0
   version: $[format('{0}.{1}.{2}', variables.majorVersion, variables.minorVersion, variables.patchVersion)]
   agentPool: Enterspeed-Production
@@ -41,18 +41,18 @@ variables:
 
 name: $(BuildID) - $(buildName)
 
-# trigger:
-#   branches:
-#     include:
-#       - master
-#       - develop
-#       - release/*
-#       - feature/*
-#       - bugfix/*
-#       - hotfix/*
-#   paths:
-#     exclude:
-#       - README.md
+trigger:
+  branches:
+    include:
+      - master
+      - develop
+      - release/*
+      - feature/*
+      - bugfix/*
+      - hotfix/*
+  paths:
+    include:
+      - 'multisite-beers/*'
 
 pr:
   branches:
@@ -77,16 +77,16 @@ stages:
             displayName: Dotnet restore
             inputs:
               command: restore
-              projects: './example-data/Enterspeed.Demos.UmbracoCms.FairyTales/Enterspeed.Demos.UmbracoCms.FairyTales.sln'
+              projects: './multisite-beers/Enterspeed.Demos.UmbracoCms.MultisiteBeers.sln'
               feedsToUse: config
-              nugetConfigPath: '$(System.DefaultWorkingDirectory)/example-data/Enterspeed.Demos.UmbracoCms.FairyTales/NuGet.Config'
+              nugetConfigPath: '$(System.DefaultWorkingDirectory)/multisite-beers/NuGet.Config'
 
           # Build solution
           - task: DotNetCoreCLI@2
             displayName: Dotnet build
             inputs:
               command: build
-              projects: './example-data/Enterspeed.Demos.UmbracoCms.FairyTales/Enterspeed.Demos.UmbracoCms.FairyTales.sln'
+              projects: './multisite-beers/Enterspeed.Demos.UmbracoCms.MultisiteBeers.sln'
               arguments: '--no-restore --configuration Release /p:Version=$(semVersion)'
 
           # Pack NuGet 
@@ -95,7 +95,7 @@ stages:
             inputs:
               command: pack
               outputDir: '$(Build.ArtifactStagingDirectory)/NuGet'
-              packagesToPack: 'example-data/Enterspeed.Demos.UmbracoCms.FairyTales/src/Enterspeed.Demos.UmbracoCms.V9.FairyTales/*.csproj;example-data/Enterspeed.Demos.UmbracoCms.FairyTales/src/Enterspeed.Demos.UmbracoCms.V10.FairyTales/*.csproj'
+              packagesToPack: 'multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/*.csproj;multisite-beers/src/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers/*.csproj'
               versioningScheme: byEnvVar
               versionEnvVar: semVersion
 
