--- a/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers.csproj
+++ b/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers.csproj
@@ -1,33 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<PackageId>Enterspeed.Demos.UmbracoCms.V10.FairyTales</PackageId>
+		<PackageId>Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers</PackageId>
 
 		<TargetFramework>net6.0</TargetFramework>
 		<PackageVersion>0.0.0</PackageVersion>
 		<Authors>Enterspeed</Authors>
 
 		<ContentTargetFolders>.</ContentTargetFolders>
-		<Description>Enterspeed fairy tales demo content kit for Umbraco version 10</Description>
+		<Description>Enterspeed multisite beers demo content kit for Umbraco version 10</Description>
 		<PackageTags>Enterspeed, Umbraco 10</PackageTags>
 
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
 		<PackageProjectUrl>https://www.enterspeed.com/</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/enterspeedhq/umbraco-demo-content</RepositoryUrl>
+		<Version>$(VersionPrefix)</Version>
+		<FileVersion></FileVersion>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Migrations\media\**" />
+	  <EmbeddedResource Remove="Migrations\media\**" />
+	  <None Remove="Migrations\media\**" />
+	</ItemGroup>
 
 	<ItemGroup>
 	  <None Remove=".gitignore" />
 	  <None Remove="azure-pipelines.yml" />
 	  <None Remove="Migrations\package.xml" />
 	  <None Remove="NuGet.Config" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <EmbeddedResource Include="Migrations\package.xml">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
