--- a/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers.csproj
+++ b/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<PackageId>Enterspeed.Demos.UmbracoCms.V10.FairyTales</PackageId>
+		<PackageId>Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers</PackageId>
 
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<PackageVersion>0.0.0</PackageVersion>
 		<Authors>Enterspeed</Authors>
 
 		<ContentTargetFolders>.</ContentTargetFolders>
-		<Description>Enterspeed fairy tales demo content kit for Umbraco version 10</Description>
-		<PackageTags>Enterspeed, Umbraco 10</PackageTags>
+		<Description>Enterspeed multisite beers demo content kit for Umbraco version 9</Description>
+		<PackageTags>Enterspeed, Umbraco 9</PackageTags>
 
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
@@ -20,18 +20,16 @@
 	<ItemGroup>
 	  <None Remove=".gitignore" />
 	  <None Remove="azure-pipelines.yml" />
-	  <None Remove="Migrations\package.xml" />
+	  <None Remove="Migrations\package.zip" />
 	  <None Remove="NuGet.Config" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Migrations\package.xml">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
+	  <EmbeddedResource Include="Migrations\package.zip" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Umbraco.Cms.Web.Common" Version="[10.0,11.0)" />
+		<PackageReference Include="Umbraco.Cms.Web.Common" Version="[9.0,10.0)" />
 	</ItemGroup>
 
 </Project>
