Added missing package.zip file for multisiteBeers V10

--- a/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers.csproj
+++ b/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers.csproj
@@ -29,7 +29,12 @@
 	  <None Remove=".gitignore" />
 	  <None Remove="azure-pipelines.yml" />
 	  <None Remove="Migrations\package.xml" />
+	  <None Remove="Migrations\package.zip" />
 	  <None Remove="NuGet.Config" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Migrations\package.zip" />
 	</ItemGroup>
 
 	<ItemGroup>
