Update NuGet info and add Umbraco marketplace info

--- a/fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.V10.FairyTales/Enterspeed.Demos.UmbracoCms.V10.FairyTales.csproj
+++ b/fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.V10.FairyTales/Enterspeed.Demos.UmbracoCms.V10.FairyTales.csproj
@@ -9,12 +9,13 @@
 
 		<ContentTargetFolders>.</ContentTargetFolders>
 		<Description>Enterspeed fairy tales demo content kit for Umbraco version 10</Description>
-		<PackageTags>Enterspeed, Umbraco 10</PackageTags>
+		<PackageTags>Enterspeed, Umbraco 10, umbraco-marketplace</PackageTags>
 
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
-		<PackageProjectUrl>https://www.enterspeed.com/</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/enterspeedhq/umbraco-demo-content</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/enterspeedhq/umbraco-demo-content</RepositoryUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -32,6 +33,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Umbraco.Cms.Web.Common" Version="[10.0,11.0)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="icon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
