--- a/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers.csproj
+++ b/multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers.csproj
@@ -9,12 +9,13 @@
 
 		<ContentTargetFolders>.</ContentTargetFolders>
 		<Description>Enterspeed multisite beers demo content kit for Umbraco version 9</Description>
-		<PackageTags>Enterspeed, Umbraco 9</PackageTags>
+		<PackageTags>Enterspeed, Umbraco 9, umbraco-marketplace</PackageTags>
 
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
-		<PackageProjectUrl>https://www.enterspeed.com/</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/enterspeedhq/umbraco-demo-content</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/enterspeedhq/umbraco-demo-content</RepositoryUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -30,6 +31,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Umbraco.Cms.Web.Common" Version="[9.0,10.0)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="icon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
