--- a/fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.V9.FairyTales/Enterspeed.Demos.UmbracoCms.V9.FairyTales.csproj
+++ b/fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.V9.FairyTales/Enterspeed.Demos.UmbracoCms.V9.FairyTales.csproj
@@ -9,7 +9,7 @@
 
 		<ContentTargetFolders>.</ContentTargetFolders>
 		<Description>Enterspeed fairy tales demo content kit for Umbraco version 9</Description>
-		<PackageTags>Enterspeed, Umbraco 9, umbraco-marketplace</PackageTags>
+		<PackageTags>Enterspeed, Umbraco 9</PackageTags>
 
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
