--- a/multisite-beers/.gitignore
+++ b/multisite-beers/.gitignore
@@ -349,3 +349,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 *.orig
+
+# Jetbrains rider files
+.idea/.idea.Enterspeed.Demos.UmbracoCms.MultisiteBeers/.idea/
