--- a/multisite-beers/azure-pipelines.yml
+++ b/multisite-beers/azure-pipelines.yml
@@ -95,7 +95,7 @@ stages:
             inputs:
               command: pack
               outputDir: '$(Build.ArtifactStagingDirectory)/NuGet'
-              packagesToPack: 'multisite-beers/src/Enterspeed.Demos.UmbracoCms.V9.MultisiteBeers/*.csproj;multisite-beers/src/Enterspeed.Demos.UmbracoCms.V10.MultisiteBeers/*.csproj'
+              packagesToPack: 'multisite-beers/src/Enterspeed.Demos.UmbracoCms.MultisiteBeers/*.csproj'
               versioningScheme: byEnvVar
               versionEnvVar: semVersion
 
