--- a/fairy-tales-the-flying-trunk/azure-pipelines.yml
+++ b/fairy-tales-the-flying-trunk/azure-pipelines.yml
@@ -95,7 +95,7 @@ stages:
             inputs:
               command: pack
               outputDir: '$(Build.ArtifactStagingDirectory)/NuGet'
-              packagesToPack: 'fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.V9.FairyTales/*.csproj;fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.V10.FairyTales/*.csproj'
+              packagesToPack: 'fairy-tales-the-flying-trunk/src/Enterspeed.Demos.UmbracoCms.FairyTales/*.csproj'
               versioningScheme: byEnvVar
               versionEnvVar: semVersion
 
