--- a/fairy-tales-the-flying-trunk/azure-pipelines.yml
+++ b/fairy-tales-the-flying-trunk/azure-pipelines.yml
@@ -26,10 +26,10 @@ variables:
     buildName: $[format('Release - {0}', variables.semVersion)]
   ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/feature/') }}:
     # Versioning: 1.0.0-feature.branch.123
-    releaseOnNuget: true
+    releaseOnNuget: false
     semVersionBase: $[format('{0}-feature.{1}', variables.version, variables['Build.SourceBranchName'])]
     semVersionRev: $[counter(variables.semVersionBase, 0)]
-    semVersion: $[format('{0}.{1}.{2}', variables.semVersionBase, variables.semVersionRev,'-alpha-1')]
+    semVersion: $[format('{0}.{1}', variables.semVersionBase, variables.semVersionRev)]
     buildName: $[format('Feature - {0}', variables.semVersion)]
   ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}: # Pull requests
     # Versioning: 1.0.0-pr.1.123
